@@ -4,8 +4,10 @@ import com.sparta.newsfeedproject.domain.comment.dto.CommentDTO;
 import com.sparta.newsfeedproject.domain.comment.entity.Comment;
 import com.sparta.newsfeedproject.domain.exception.CustomException;
 import com.sparta.newsfeedproject.domain.exception.eunm.ErrorCode;
-import com.sparta.newsfeedproject.domain.news.dto.NewsRequestDTO;
-import com.sparta.newsfeedproject.domain.news.dto.NewsResponseDTO;
+import com.sparta.newsfeedproject.domain.news.dto.NewsCreateRequestDTO;
+import com.sparta.newsfeedproject.domain.news.dto.NewsCreateResponseDTO;
+import com.sparta.newsfeedproject.domain.news.dto.NewsPageReadResponseDto;
+import com.sparta.newsfeedproject.domain.news.dto.NewsReadResponseDTO;
 import com.sparta.newsfeedproject.domain.news.entity.News;
 import com.sparta.newsfeedproject.domain.news.repository.NewsRepository;
 import com.sparta.newsfeedproject.domain.member.entity.Member;
@@ -26,49 +28,58 @@ public class NewsService {
     private final NewsRepository newsRepository;
 
     @Transactional
-    public NewsResponseDTO createNews(Member author, NewsRequestDTO newsDTO) {
+    public NewsCreateResponseDTO createNews(Member author, NewsCreateRequestDTO newsDTO) {
         News news = News.builder()
                 .author(author)
                 .title(newsDTO.getTitle())
                 .content(newsDTO.getContent())
                 .build();
         newsRepository.save(news);
-        return mapToResponseDTO(news);
+        return mapToCrateResponseDTO(news);
     }
 
     @Transactional(readOnly = true)
-    public Page<NewsResponseDTO> getAllNews(int pageNo, int pageSize) {
+    public Page<NewsPageReadResponseDto> getAllNews(int pageNo, int pageSize) {
         PageRequest pageable = PageRequest.of(pageNo - 1, pageSize, Sort.by(Sort.Direction.DESC, "createdAt"));
-        return newsRepository.findAll(pageable).map(this::mapToResponseDTO);
+        return newsRepository.findAll(pageable).map(this::mapToReadPageResponseDTO);
     }
 
     @Transactional(readOnly = true)
-    public NewsResponseDTO getNews(Long id) {
+    public NewsReadResponseDTO getNews(Long id) {
         News news = newsRepository.findById(id)
                 .orElseThrow(() -> new CustomException(ErrorCode.NEWS_NOT_FOUND));  // CustomException 사용
 
         // Comment 리스트를 DTO로 변환
         List<CommentDTO> commentList = news.getComments().stream()
                 .map(this::mapToCommentDTO)
-                .collect(Collectors.toList());
+                .toList();
 
-        return NewsResponseDTO.builder()
+        return NewsReadResponseDTO.builder()
                 .id(news.getId())
                 .title(news.getTitle())
                 .content(news.getContent())
                 .authorNickname(news.getAuthor().getNickName())
-                .modifyAt(news.getModifiedAt().toString())
+                .modifyAt(news.getModifiedAt())
                 .commentList(commentList)  // 코멘트 리스트 추가
                 .build();
     }
 
-    private NewsResponseDTO mapToResponseDTO(News news) {
-        return NewsResponseDTO.builder()
+    private NewsCreateResponseDTO mapToCrateResponseDTO(News news) {
+        return NewsCreateResponseDTO.builder()
+                .id(news.getId())
+                .title(news.getTitle())
+                .content(news.getContent())
+                .build();
+    }
+
+    private NewsPageReadResponseDto mapToReadPageResponseDTO(News news) {
+        return NewsPageReadResponseDto.builder()
                 .id(news.getId())
                 .title(news.getTitle())
                 .content(news.getContent())
                 .authorNickname(news.getAuthor().getNickName())
-                .modifyAt(news.getModifiedAt().toString())
+                .modifyAt(news.getModifiedAt())
+                .commentCount(news.getComments().size())
                 .build();
     }
 
